[package]
name = "patcher"
version = "0.1.0"
authors = ["Yoandy Rodriguez Martinez <yoandy.rmartinez@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple patchbay.pub like utility"
categories = ["command-line-utilities"]
keywords = ["utils"]
readme = "README.md"
homepage = "https://github.com/yorodm/patcher"
repository = "https://github.com/yorodm/patcher"
[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
log = "0.4.8"
stderrlog = "0.4.3"
gumdrop = "0.8.0"
futures-util = "0.3.5"
bytes = "0.5.5"
